--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,12 @@
         }
     ],
     "require": {
-        "ext-json": "*",
-        "monolog/monolog": "^1.24",
         "php": ">=7.1",
+        "ext-json": "*",
+        "league/oauth2-client": "^2.4",
+        "monolog/monolog": "^1.24",
         "php-di/php-di": "^6.0",
+        "phpmailer/phpmailer": "^6.1",
         "slim/psr7": "^0.5",
         "slim/slim": "^4.1"
     },
