--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-json": "*",
         "league/oauth2-client": "^2.4",
         "monolog/monolog": "^1.24",
+        "mpdf/mpdf": "^8.0",
         "php-di/php-di": "^6.0",
         "phpmailer/phpmailer": "^6.1",
         "phpoffice/phpspreadsheet": "^1.11",
